fix coding language alignemnt in jumbotrom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,8 +126,8 @@ section {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 5%;
-    margin-top: 25px;
+    padding: 5.5%;
+    margin-top: 27px;
 }
 
 .hero-video {
